# langchain_examples

./: .gitignore  CLAUDE.md  TODO.md  pyproject.toml
docs/: architecture.md  design-decisions.md  extensibility-guide.md
examples/: README.md  example1.py  example2.py
src/langchain_examples/: __init__.py  main.py
src/langchain_examples/agents/: agents.py  models.py  prompts.py  routes.py  state.py
src/langchain_examples/tools/: scrapers.py
